Fix layout a little

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 }
 body {
     margin: 0;
+    background: #1f2937;
 }
 a {
     text-decoration: none;
@@ -17,39 +18,40 @@ a {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 100vh; 
-    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+    height: 100vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .header,
-.footer,
-.intro {
-    flex: 1;
+.footer {
     background: #1f2937;
 }
 .information,
 .quote,
 .signup {
     flex: 1;
+    background: white;
 }
 
 .header {
-    max-height: 50px;
+    flex-basis: 50px;
+    flex-shrink: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between; 
-    padding: 0px 8rem; 
-    gap: 50px; 
+    justify-content: space-between;
+    padding: 0px 8rem;
+    gap: 50px;
 }
 .header-logo {
-    flex-shrink: 0; 
+    flex-shrink: 0;
     color: #f9faf8;
     font-size: 24px;
     font-weight: bold;
 }
 
-.header-links, .footer {
-    flex: 0 0 auto; 
+.header-links,
+.footer {
+    flex: 0 0 auto;
     display: flex;
     list-style: none;
     padding: 0px;
@@ -61,16 +63,22 @@ a {
     justify-content: center;
 }
 
+.intro {
+    flex: 1 0 300px;
+    background: #1f2937;
+}
 
 .information {
-    min-height: 250px; 
+    min-height: 250px;
 }
 .quote {
-    min-height: 220px; 
+    min-height: 220px;
     background: #e5e7eb;
 }
-
+.signup {
+    min-height: 180px;
+}
 .footer {
-    max-height: 50px; 
-    font-size: 12px; 
+    flex-basis: 50px;
+    font-size: 12px;
 }
