--- a/style.css
+++ b/style.css
@@ -64,16 +64,98 @@ a {
 }
 
 .intro {
-    flex: 1 0 300px;
+    padding: 130px 80px; 
+    flex: 1 0 fit-content;
     background: #1f2937;
+    display: flex; 
+    justify-content: center;
+}
+.text-signup {
+    max-width: 40%; 
+    font-size: 18px; 
+    color: #e5e7eb; 
+    margin-right: 50px; 
+}
+.text-signup > h1 {
+    font-size: 48px; 
+    font-weight: extra-bold; 
+    color: #f9faf8; 
+    margin: 0px;
+}
+button {
+    background: #3882f6; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    padding: 5px 20px;
+    font-weight: 500; 
+}
+.image-placeholder {
+    color: white; 
+    padding: 10px; 
+    width: 475px; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background-color: slategray;
 }
 
 .information {
+    flex: 1 0 auto; 
     min-height: 250px;
+    display: flex; 
+    flex-direction: column; 
+    padding: 20px 40px 80px 40px; 
+    text-align: center; 
+}
+.box-container {
+    display: flex; 
+    justify-content: center;
+    gap: 50px; 
+}
+.box {
+    border: 4px solid #3882f6; 
+    height: 175px; 
+    width: 175px; 
+    border-radius: 10px; 
+}
+.box-item-container{
+    width: fit-content; 
+    height: fit-content; 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.box-caption {
+    width: 150px; 
+    padding: 0px; 
+    margin: 8px 0px 0px;
 }
 .quote {
-    min-height: 220px;
+    padding: 50px 0px; 
+    min-height: fit-content;  
     background: #e5e7eb;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+.quote-content {
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    width: 1000px; 
+    height: 300px; 
+    font-style: italic; 
+    font-size: 38px; 
+}
+.thor {
+    display: flex;
+    font-size: 25px; 
+    font-weight: bold; 
+    color: black; 
+    justify-content: flex-end;
+
 }
 .signup {
     min-height: 180px;
