--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ button {
     color: white; 
     padding: 10px; 
     width: 475px; 
+    min-height: 230px; 
     display: flex; 
     justify-content: center;
     align-items: center;
@@ -133,7 +134,7 @@ button {
     margin: 8px 0px 0px;
 }
 .quote {
-    padding: 50px 0px; 
+    padding: 50px 20px; 
     min-height: fit-content;  
     background: #e5e7eb;
     display: flex; 
@@ -158,9 +159,38 @@ button {
 
 }
 .signup {
-    min-height: 180px;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
+
+.signup > .container{
+    display: flex; 
+    flex: 1; 
+    max-width: fit-content; 
+    background-color:#3882f6; 
+    margin: 100px 150px; 
+    padding: 30px 90px; 
+    border-radius: 8px; 
+    color: white;
+    gap: 150px; 
+    justify-content: space-around;
+    align-items: center;
+}
+
+.call-to-action {
+    font-weight: bold; 
+}
+.signup-button {
+    border: 1px solid white; 
+    height: fit-content; 
+    width: auto; 
+    padding-left: 25px; 
+    padding-right: 25px; 
+}
+
 .footer {
     flex-basis: 50px;
     font-size: 12px;
+    padding: 25px 0px; 
 }
